--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "redpot.js",
     "version": "0.0.1",
-    "main": "dist/redpot.js",
+    "main": "redpot.js",
     "ignore": [
         "source",
         "spec",
